# transcoder

./: Cargo.toml  default.nix  flake.nix
src/: lib.rs  main.rs  transcoder.rs  watcher.rs
test/: transcode.nix
