[package]
name = "transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
async-inotify = "0.1.0"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
inotify = "0.10.2"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["fs"] }
toml = "0.9.7"
